--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "angular-4-data-table": "^0.3.0",
+    "angularfire2": "^4.0.0-rc.1",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.2.0",
+    "ng2-validation": "^4.2.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -44,6 +50,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "angular-4-data-table": "^0.3.0"
   }
 }
